# netlog-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
demo/: record_tfsm_demo.sh  tfsm_demo.cast  tfsm_demo.py  tfsm_demo.tape  tfsm_demo.webm
docs/: CONNECTORS.md  LINKEDIN_POST.md  LOGS_PIPELINE_HARDENING.md  SCORING_SPLIT.md  TFSM_AUTO_PARSER.md  TOPOLOGY.md  demo-720p.webm
samples/: _manifest.json  eos-rt-01.txt  eos-sw-01.txt  junos-fw-01.txt  junos-rt-01.txt  junos-sw-01.txt
scripts/: README.md  audit-a11y.cjs  import_clab_clos_evpn.py  import_dcn_lab.py
sites/clab-clos-evpn/: leaf1.txt  leaf2.txt  leaf3.txt  leaf4.txt  leaf5.txt  leaf6.txt  manifest.json  spine1.txt  spine2.txt  spine3.txt
sites/dcn-lab/: de-fra-core-01.txt  de-fra-core-02.txt  de-fra-dist-01.txt  de-fra-edge-01.txt  manifest.json  nl-ams-core-01.txt  nl-ams-edge-01.txt  uk-lon-core-01.txt  uk-lon-dist-01.txt  uk-lon-edge-01.txt  us-nyc-core-01.txt
sites/lab-alpha/: fw-01a.txt  fw-01b.txt  manifest.json  rt-01.txt  sw-01.txt  sw-02.txt
sites/lab-bravo/: fw-01.txt  manifest.json  rt-01.txt  rt-02.txt  sw-01.txt  sw-02.txt  sw-03.txt
src/ai_log_analyzer/: __init__.py  analyzer.py  classifier.py  cli.py  compliance.py  copilot.py  diff.py  kb.py  llm.py  postmortem.py  reports.py  runbook.py  sanitize.py  site_diagram.py  site_doc.py  site_optimize.py  topology.py  topology_infer.py
src/ai_log_analyzer/adapters/: __init__.py  file.py  frr.py  network_tool.py  tfsm_auto.py
src/ai_log_analyzer/mcp_server/: __init__.py  server.py
src/ai_log_analyzer/sources/: __init__.py  base.py  kibana.py  librenms.py  loki.py  manager.py  splunk.py  syslog.py
src/ai_log_analyzer/web/: __init__.py  app.py
src/ai_log_analyzer/web/static/: app.js  index.html
tests/: test_adapters.py  test_analyzer.py  test_classifier.py  test_kb_phased.py  test_llm_providers.py  test_network_tool.py  test_new_features.py  test_phase1_security.py  test_sanitize.py  test_site_optimize.py  test_sources.py  test_tfsm_auto.py  test_topology_infer.py
