[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netlog-ai"
version = "0.1.0"
description = "AI-powered network syslog analyzer with pluggable LLM providers (local Docker Model Runner / Anthropic Claude) and lab adapters."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Gaydarov" }]
keywords = ["network", "syslog", "log-analysis", "ai", "llm", "claude", "frr", "junos", "eos", "bgp", "ospf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=5.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]
mcp = ["mcp>=1.0"]
# Auto-detection parser for arbitrary CLI output (scottpeterman/tfsm_fire).
# Pulls in textfsm + a SQLite-backed template engine. ~600KB template DB is
# auto-downloaded to ~/.cache/netlog-ai/ on first use — see docs/TFSM_AUTO_PARSER.md
parse = ["tfsm-fire>=0.1.0"]
all = ["mcp>=1.0", "tfsm-fire>=0.1.0"]

[project.urls]
Homepage = "https://github.com/gesh75/netlog-ai"
Repository = "https://github.com/gesh75/netlog-ai"
Issues = "https://github.com/gesh75/netlog-ai/issues"

[project.scripts]
ai-log-analyzer = "ai_log_analyzer.cli:main"
netlog-ai      = "ai_log_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: tests that hit docker / network / LLM",
]

[tool.ruff]
line-length = 110
target-version = "py310"
